--- a/.github/workflows/precommit_workflow.yml
+++ b/.github/workflows/precommit_workflow.yml
@@ -24,6 +24,10 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install pre-commit
+        
+    - name: Dowload precommit config file
+      run: |
+        curl -o .pre-commit-config.yaml https://raw.githubusercontent.com/Infra-Test-D/Flujos_de_trabajo/a75bc1323d44d3dcea9a4d7ac513252c16dafd8f/.pre-commit-config.yaml
       
     - name: Run pre-commit checks
       run: |
