--- a/.github/workflows/precommit_workflow.yml
+++ b/.github/workflows/precommit_workflow.yml
@@ -1,6 +1,14 @@
 name: Pre-commit
 
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - main
+      - '**'
+  pull_request:
+    branches:
+      - main
+      - '**'
 
 jobs:
   pre-commit:
