--- a/.github/workflows/precommit_workflow.yml
+++ b/.github/workflows/precommit_workflow.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Show commit diff
       run: |
         echo "Commit diff:"
-        git diff ${{ env.GITHUB_SHA }}
+        git diff HEAD
 
     - name: Set up Python
       uses: actions/setup-python@v2
