--- a/.github/workflows/precommit_workflow.yml
+++ b/.github/workflows/precommit_workflow.yml
@@ -36,4 +36,4 @@ jobs:
       
     - name: Run pre-commit checks
       run: |
-        pre-commit run --all-files
+        pre-commit run --single-commit
