--- a/.github/workflows/precommit_workflow.yml
+++ b/.github/workflows/precommit_workflow.yml
@@ -15,6 +15,10 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
+      
+    - name: Run
+      run: |
+        git reset --soft HEAD~1
     
     - name: Show commit diff
       run: |
@@ -33,7 +37,7 @@ jobs:
     - name: Dowload precommit config file
       run: |
         curl -o .pre-commit-config.yaml https://raw.githubusercontent.com/Infra-Test-D/Flujos_de_trabajo/a75bc1323d44d3dcea9a4d7ac513252c16dafd8f/.pre-commit-config.yaml
-      
+    
     - name: Run pre-commit checks
       run: |
-        pre-commit run --single-commit
+        pre-commit run
