--- a/.github/workflows/precommit_workflow.yml
+++ b/.github/workflows/precommit_workflow.yml
@@ -18,7 +18,7 @@ jobs:
       
     - name: Run
       run: |
-        git reset --soft HEAD~1
+        git reset --soft HEAD
     
     - name: Show commit diff
       run: |
