--- a/.github/workflows/precommit_workflow.yml
+++ b/.github/workflows/precommit_workflow.yml
@@ -31,4 +31,4 @@ jobs:
     
     - name: Run pre-commit checks
       run: |
-        pre-commit run --from-ref=HEAD~1 --to-ref=HEAD
+        pre-commit run --from-ref=HEAD --to-ref=HEAD~1
