--- a/.github/workflows/precommit_workflow.yml
+++ b/.github/workflows/precommit_workflow.yml
@@ -30,5 +30,8 @@ jobs:
         curl -o .pre-commit-config.yaml https://raw.githubusercontent.com/Infra-Test-D/Flujos_de_trabajo/a75bc1323d44d3dcea9a4d7ac513252c16dafd8f/.pre-commit-config.yaml
     
     - name: Run pre-commit checks
+      id: run_pre_commit
       run: |
         pre-commit run -a
+      if: failure()
+      continue-on-error: true
