--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,5 +2,5 @@ repos:
 -   repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.4.0  # Use the ref you want to point at
     hooks:
-    -   id: detect_aws_credentials
-
+    -   id: detect-private-key
+    -   id: detect-aws-credentials
