--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,4 +4,4 @@ repos:
     hooks:
     -   id: detect-private-key
     -   id: detect-aws-credentials
-        args: --allow-missing-credentials
+        args: [--allow-missing-credentials]
