--- a/.github/workflows/precommit_workflow.yml
+++ b/.github/workflows/precommit_workflow.yml
@@ -33,5 +33,5 @@ jobs:
       id: run_pre_commit
       run: |
         pre-commit run -a >> result.txt
-        cat result.txt
+        cat result.txt | sed 's/.*/\x1b[31m&\x1b[0m/'
         exit 0
